--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==40.0.1
 defusedxml==0.7.1
+dj-database-url==1.2.0
 Django==4.2
 django-cors-headers==3.14.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+gunicorn==20.1.0
 idna==3.4
 itypes==1.2.0
 Jinja2==3.1.2
@@ -31,3 +33,4 @@ sqlparse==0.4.3
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.15
+whitenoise==6.3.0
