--- a/requirements.txt
+++ b/requirements.txt
@@ -11,16 +11,20 @@ dj-database-url==1.2.0
 Django==4.2
 django-cloudinary-storage==0.3.0
 django-cors-headers==3.14.0
+django-phonenumber-field==7.1.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 gunicorn==20.1.0
 idna==3.4
+install==1.3.5
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 oauthlib==3.2.2
+phonenumbers==8.13.11
+phonenumberslite==8.13.11
 Pillow==9.5.0
 psycopg2==2.9.6
 pycparser==2.21
