--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==40.0.1
 defusedxml==0.7.1
+Deprecated==1.2.13
 dj-database-url==1.2.0
 Django==4.2
 django-cloudinary-storage==0.3.0
@@ -22,6 +23,7 @@ install==1.3.5
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+nexmo==2.5.2
 oauthlib==3.2.2
 phonenumbers==8.13.11
 phonenumberslite==8.13.11
@@ -42,3 +44,4 @@ tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.15
 whitenoise==6.3.0
+wrapt==1.15.0
