--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.6.0
+CacheControl==0.12.11
+cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -17,26 +19,47 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+firebase-admin==6.1.0
+google-api-core==2.11.0
+google-api-python-client==2.86.0
+google-auth==2.18.1
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2
+google-cloud-firestore==2.11.1
+google-cloud-storage==2.9.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.0
+grpcio==1.54.2
+grpcio-status==1.54.2
 gunicorn==20.1.0
+httplib2==0.22.0
 idna==3.4
 install==1.3.5
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+msgpack==1.0.5
 nexmo==2.5.2
 oauthlib==3.2.2
 phonenumbers==8.13.11
 phonenumberslite==8.13.11
 Pillow==9.5.0
+proto-plus==1.22.2
+protobuf==4.23.1
 psycopg2==2.9.6
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==1.10.7
 PyJWT==2.6.0
+pyparsing==3.0.9
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 requests==2.28.2
 requests-oauthlib==1.3.1
+rsa==4.9
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.4.1
