--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+drf-yasg==1.21.5
 firebase-admin==6.1.0
 google-api-core==2.11.0
 google-api-python-client==2.86.0
@@ -35,6 +36,7 @@ grpcio-status==1.54.2
 gunicorn==20.1.0
 httplib2==0.22.0
 idna==3.4
+inflection==0.5.1
 install==1.3.5
 itypes==1.2.0
 Jinja2==3.1.2
@@ -42,6 +44,7 @@ MarkupSafe==2.1.2
 msgpack==1.0.5
 nexmo==2.5.2
 oauthlib==3.2.2
+packaging==23.1
 phonenumbers==8.13.11
 phonenumberslite==8.13.11
 Pillow==9.5.0
@@ -60,6 +63,8 @@ pytz==2023.3
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
+ruamel.yaml==0.17.26
+ruamel.yaml.clib==0.2.7
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.4.1
