--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,21 @@ aiosignal==1.3.1
 asgiref==3.6.0
 async-timeout==4.0.2
 attrs==23.1.0
+autobahn==23.6.2
+Automat==22.10.0
 CacheControl==0.12.11
 cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
+channels==4.0.0
+channels-redis==4.1.0
 charset-normalizer==3.1.0
 cloudinary==1.32.0
+constantly==15.1.0
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==40.0.1
+cryptography==41.0.1
+daphne==4.0.0
 defusedxml==0.7.1
 Deprecated==1.2.13
 dj-database-url==1.2.0
@@ -41,7 +47,9 @@ grpcio==1.54.2
 grpcio-status==1.54.2
 gunicorn==20.1.0
 httplib2==0.22.0
+hyperlink==21.0.0
 idna==3.4
+incremental==22.10.0
 inflection==0.5.1
 install==1.3.5
 itypes==1.2.0
@@ -63,20 +71,25 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==1.10.7
 PyJWT==2.6.0
+pyOpenSSL==23.2.0
 pyparsing==3.0.9
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
+redis==4.5.5
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
 ruamel.yaml==0.17.26
 ruamel.yaml.clib==0.2.7
+service-identity==23.1.0
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.4.1
 sqlparse==0.4.3
 twilio==8.2.2
+Twisted==22.10.0
+txaio==23.1.1
 typing_extensions==4.5.0
 tzdata==2023.3
 uritemplate==4.1.1
@@ -85,3 +98,4 @@ vonage==3.5.0
 whitenoise==6.3.0
 wrapt==1.15.0
 yarl==1.9.2
+zope.interface==6.0
