--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cffi==1.15.1
 channels==4.0.0
 channels-redis==4.1.0
 charset-normalizer==3.1.0
+click==8.1.3
 cloudinary==1.32.0
 constantly==15.1.0
 coreapi==2.3.3
@@ -46,6 +47,7 @@ googleapis-common-protos==1.59.0
 grpcio==1.54.2
 grpcio-status==1.54.2
 gunicorn==20.1.0
+h11==0.14.0
 httplib2==0.22.0
 hyperlink==21.0.0
 idna==3.4
@@ -94,6 +96,7 @@ typing_extensions==4.5.0
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.15
+uvicorn==0.22.0
 vonage==3.5.0
 whitenoise==6.3.0
 wrapt==1.15.0
